refactor: restructure repo
* Restructures monorepo packages
* Updated pesde manifests with scope and other metadata
* Consolidated all interactive install logic into __call metamethod for
  one liner bin re-exports
* Renamed binlib->toolchainlib
* Introduced first real world package - stylua (!!)

--- a/pesde.toml
+++ b/pesde.toml
@@ -1,13 +1,11 @@
-name = "compeydev/pesde_bins"
+name = "pesde/tooling"
 version = "0.1.0"
 private = true
 
-workspace_members = ["lune", "core"]
+workspace_members = ["toolchainlib", "bins/*"]
 
 [target]
 environment = "lune"
 
 [indices]
 default = "https://github.com/daimond113/pesde-index"
-
-
