--- a/bins/stylua/pesde.toml
+++ b/bins/stylua/pesde.toml
@@ -1,11 +1,11 @@
-name = "compeydev/lune"
-version = "0.8.9"
+name = "pesde/stylua"
+version = "2.0.1"
 description = "A standalone Luau runtime"
 authors = [
     "CompeyDev <hi@devcomp.xyz>",
-    "Filip Tibell <filip.tibell@gmail.com>",
+    "Johnny Morganz <johnnymorganz@outlook.com>",
 ]
-repository = "https://github.com/CompeyDev/pesde-tooling/blob/main/lune"
+repository = "https://github.com/pesde-dev/tooling"
 license = "MIT"
 
 [target]
@@ -15,8 +15,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.0" }
 option = { name = "lukadev_0/option", version = "^1.2.0" }
-semver = { name = "0x5eal/semver", version = "^0.1.1", target = "luau" }
-core = { workspace = "compeydev/binlib", version = "^" }
+core = { workspace = "pesde/toolchainlib", version = "^" }
 
 [indices]
 default = "https://github.com/daimond113/pesde-index"
