--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "luau-lsp.require.mode": "relativeToFile",
+  "luau-lsp.sourcemap.enabled": false,
   "luau-lsp.require.directoryAliases": {
     "@lune/": "~/.lune/.typedefs/0.8.9/"
   },
