--- a/bins/stylua/pesde.toml
+++ b/bins/stylua/pesde.toml
@@ -1,12 +1,12 @@
 name = "pesde/stylua"
 version = "2.0.1"
-description = "A standalone Luau runtime"
+description = "A Lua code formatter"
 authors = [
     "CompeyDev <hi@devcomp.xyz>",
     "Johnny Morganz <johnnymorganz@outlook.com>",
 ]
-repository = "https://github.com/pesde-dev/tooling"
-license = "MIT"
+repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/stylua"
+includes = ["init.luau", "pesde.toml"]
 
 [target]
 environment = "lune"
