--- a/toolchainlib/pesde.toml
+++ b/toolchainlib/pesde.toml
@@ -1,6 +1,8 @@
 name = "pesde/toolchainlib"
 version = "0.1.0"
-includes = ["src/", "pesde.toml", "LICENSE", "README.md"]
+license = "MIT"
+repository = "https://github.com/pesde-pkg/tooling/tree/main/toolchainlib"
+includes = ["src", "pesde.toml", "LICENSE", "README.md"]
 
 [target]
 environment = "lune"
