--- a/toolchainlib/pesde.toml
+++ b/toolchainlib/pesde.toml
@@ -2,7 +2,7 @@ name = "pesde/toolchainlib"
 version = "0.1.0"
 license = "MIT"
 repository = "https://github.com/pesde-pkg/tooling/tree/main/toolchainlib"
-includes = ["src", "pesde.toml", "LICENSE", "README.md"]
+includes = ["src", "pesde.toml", "LICENSE.md", "README.md"]
 
 [target]
 environment = "lune"
