chore(lune): include lune dev scripts
* Adds dev lune scripts to execute tooling in dev env, also a nice way
  to dogfood the project.
* Disables all lints in luaurc temporarily, since luau-lsp analysis displays
  lint errors even for ignored files for some reason.
* Fixes a few `TypeError`s.

--- a/pesde.toml
+++ b/pesde.toml
@@ -7,5 +7,8 @@ workspace_members = ["toolchainlib", "bins/*"]
 [target]
 environment = "lune"
 
+[dependencies]
+option = { name = "lukadev_0/option", version = "^1.2.0" }
+
 [indices]
 default = "https://github.com/daimond113/pesde-index"
