--- a/pesde.toml
+++ b/pesde.toml
@@ -9,6 +9,7 @@ environment = "lune"
 
 [dependencies]
 option = { name = "lukadev_0/option", version = "^1.2.0" }
+pathfs = { name = "jiwonz/pathfs", version = "^0.1.0" }
 
 [indices]
 default = "https://github.com/daimond113/pesde-index"
