--- a/toolchainlib/pesde.toml
+++ b/toolchainlib/pesde.toml
@@ -1,4 +1,5 @@
 name = "pesde/toolchainlib"
+description = "A Luau library for implementing toolchain management"
 version = "0.1.2"
 license = "MIT"
 repository = "https://github.com/pesde-pkg/tooling/tree/main/toolchainlib"
