chore(lune): fetch and update READMEs for bins too
* Updates the `update_tools` dev script to include logic for using the
  GitHub API to fetch and write READMEs for bins.
* Also optionally accepts a GitHub token for authenticated requests
  using the `$GITHUB_TOKEN` environment variable.
* Also moves dev script dependencies at root manifest into
  `dev_dependencies`.

--- a/pesde.toml
+++ b/pesde.toml
@@ -7,9 +7,10 @@ workspace_members = ["toolchainlib", "bins/*"]
 [target]
 environment = "lune"
 
-[dependencies]
+[dev_dependencies]
 option = { name = "lukadev_0/option", version = "^1.2.0" }
 pathfs = { name = "jiwonz/pathfs", version = "^0.1.0" }
+base64 = { name = "synpixel/base64", version = "^3.0.1" }
 
 [indices]
 default = "https://github.com/daimond113/pesde-index"
