--- a/bins/blink/pesde.toml
+++ b/bins/blink/pesde.toml
@@ -3,7 +3,7 @@ version = "0.15.0-rc.1"
 description = "An IDL compiler written in Luau for ROBLOX buffer networking"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Axen <axen@frombloxware.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/blink"
-includes = ["init.luau", "pesde.toml"]
+includes = ["init.luau", "README.md", "pesde.toml"]
 
 [target]
 environment = "lune"
