--- a/bins/darklua/pesde.toml
+++ b/bins/darklua/pesde.toml
@@ -6,7 +6,7 @@ authors = [
     "jeparlefrancais <jeparlefrancais21@gmail.com>",
 ]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/darklua"
-includes = ["init.luau", "pesde.toml"]
+includes = ["init.luau", "README.md", "pesde.toml"]
 
 [target]
 environment = "lune"
