--- a/bins/luau-lsp/pesde.toml
+++ b/bins/luau-lsp/pesde.toml
@@ -6,7 +6,7 @@ authors = [
     "Johnny Morganz <johnnymorganz@outlook.com>",
 ]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/luau-lsp"
-includes = ["init.luau", "pesde.toml"]
+includes = ["init.luau", "README.md", "pesde.toml"]
 
 [target]
 environment = "lune"
