--- a/bins/rojo/pesde.toml
+++ b/bins/rojo/pesde.toml
@@ -3,7 +3,7 @@ version = "7.4.4"
 description = "Rojo enables Roblox developers to use professional-grade software engineering tools"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Lucien Greathouse <me@lpghatguy.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/rojo"
-includes = ["init.luau", "pesde.toml"]
+includes = ["init.luau", "README.md", "pesde.toml"]
 
 [target]
 environment = "lune"
