--- a/bins/selene/pesde.toml
+++ b/bins/selene/pesde.toml
@@ -3,7 +3,7 @@ version = "0.27.1"
 description = "A blazing-fast modern Lua linter written in Rust"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Kampfkarren <kampfkarren@gmail.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/selene"
-includes = ["init.luau", "pesde.toml"]
+includes = ["init.luau", "README.md", "pesde.toml"]
 
 [target]
 environment = "lune"
