refactor(lib): use extension pattern for result<->option
Formerly, we used metatables to get custom `Option` and `Result` objects
which were difficult to type properly, leading to a lot of `unknown` and
`any` casts.

This refactor fixes it by making extensions opt-in, where we import the
extension methods separately from the original implementations, thereby
allowing us to not have to typecast things everywhere.

--- a/pesde.toml
+++ b/pesde.toml
@@ -9,6 +9,7 @@ environment = "lune"
 
 [dev_dependencies]
 option = { name = "lukadev_0/option", version = "^1.2.0" }
+result = { name = "lukadev_0/result", version = "^1.2.0" }
 pathfs = { name = "jiwonz/pathfs", version = "^0.1.0" }
 base64 = { name = "synpixel/base64", version = "^3.0.1" }
 
