--- a/pesde.toml
+++ b/pesde.toml
@@ -14,4 +14,4 @@ pathfs = { name = "jiwonz/pathfs", version = "^0.1.0" }
 base64 = { name = "synpixel/base64", version = "^3.0.1" }
 
 [indices]
-default = "https://github.com/daimond113/pesde-index"
+default = "https://github.com/pesde-pkg/index"
