chore(pkg): migrate to pesde v0.6.0 w/ engines

--- a/bins/darklua/pesde.toml
+++ b/bins/darklua/pesde.toml
@@ -8,6 +8,10 @@ authors = [
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/darklua"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
+[engines]
+lune = ">=0.8.7"
+pesde = "^0.6.0-rc.6"
+
 [target]
 environment = "lune"
 bin = "init.luau"
