--- a/pesde.toml
+++ b/pesde.toml
@@ -4,6 +4,10 @@ private = true
 
 workspace_members = ["toolchainlib", "bins/*"]
 
+[engines]
+lune = ">=0.8.7"
+pesde = "^0.6.0-rc.6"
+
 [target]
 environment = "lune"
 
