--- a/toolchainlib/pesde.toml
+++ b/toolchainlib/pesde.toml
@@ -5,6 +5,10 @@ license = "MIT"
 repository = "https://github.com/pesde-pkg/tooling/tree/main/toolchainlib"
 includes = ["src/**/*.luau", "pesde.toml", "LICENSE", "README.md"]
 
+[engines]
+lune = ">=0.8.7"
+pesde = "^0.6.0-rc.6"
+
 [target]
 environment = "lune"
 lib = "src/init.luau"
