--- a/bins/asphalt/pesde.toml
+++ b/bins/asphalt/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/asphalt"
-version = "0.9.1"
+version = "1.0.0-pre.0"
 description = "Upload and reference Roblox assets in code"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Jack T <jack@jackt.space>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/asphalt"
