--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
   "luau-lsp.sourcemap.enabled": false,
-  "luau-lsp.require.directoryAliases": {
-    "@lune/": "~/.lune/.typedefs/0.8.9/"
-  },
   "stylua.targetReleaseVersion": "latest",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
 }
