--- a/bins/stylua/pesde.toml
+++ b/bins/stylua/pesde.toml
@@ -9,8 +9,8 @@ repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/stylua"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
-lune = ">=0.8.7"
-pesde = "^0.6.0-rc.6"
+lune = "^0.8.7"
+pesde = "^0.6.0"
 
 [target]
 environment = "lune"
