Change Asphalt description

--- a/bins/asphalt/pesde.toml
+++ b/bins/asphalt/pesde.toml
@@ -1,6 +1,6 @@
 name = "pesde/asphalt"
 version = "1.0.0-pre.10"
-description = "Upload and reference Roblox assets in code"
+description = "An assets-as-files tool for Roblox"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Jack T <jack@jackt.space>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/asphalt"
 includes = ["init.luau", "README.md", "pesde.toml"]
