ci: add private_failing_tools script

--- a/bins/asphalt/pesde.toml
+++ b/bins/asphalt/pesde.toml
@@ -4,6 +4,7 @@ description = "An assets-as-files tool for Roblox"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Jack T <jack@jackt.space>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/asphalt"
 includes = ["init.luau", "README.md", "pesde.toml"]
+private = false
 
 [engines]
 lune = "^0.8.7"
