--- a/bins/zap/pesde.toml
+++ b/bins/zap/pesde.toml
@@ -4,6 +4,7 @@ description = "A lightning fast networking solution for roblox."
 authors = ["CompeyDev <hi@devcomp.xyz>", "Redblox Organization"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/zap"
 includes = ["init.luau", "README.md", "pesde.toml"]
+private = false
 
 [engines]
 lune = "^0.8.7"
