--- a/bins/blink/pesde.toml
+++ b/bins/blink/pesde.toml
@@ -4,6 +4,7 @@ description = "An IDL compiler written in Luau for ROBLOX buffer networking"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Axen <axen@frombloxware.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/blink"
 includes = ["init.luau", "README.md", "pesde.toml"]
+private = false
 
 [engines]
 lune = "^0.8.7"
