--- a/bins/selene/pesde.toml
+++ b/bins/selene/pesde.toml
@@ -4,6 +4,7 @@ description = "A blazing-fast modern Lua linter written in Rust"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Kampfkarren <kampfkarren@gmail.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/selene"
 includes = ["init.luau", "README.md", "pesde.toml"]
+private = false
 
 [engines]
 lune = "^0.8.7"
