chore: lock .luau files eol to LF

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
   "luau-lsp.require.useOriginalRequireByStringSemantics": true,
   "stylua.targetReleaseVersion": "latest",
   "editor.formatOnSave": true,
+  "files.eol": "\n"
 }
