ci: use `PESDE_TOKEN` as `GITHUB_TOKEN` for PR perms

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -61,7 +61,7 @@ jobs:
         run: pesde install --locked
       - name: Update package
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PESDE_TOKEN }} # FIXME: temporarily use pesde token for PR perms
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
