ci(publish-update): use unified PAT for `pesde publish` call

--- a/.github/workflows/publish-update.yaml
+++ b/.github/workflows/publish-update.yaml
@@ -22,8 +22,7 @@ jobs:
         id: publish
         continue-on-error: true
         env:
-          PESDE_TOKEN: ${{ secrets.PESDE_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
         run: |
           lune -V
 
@@ -57,7 +56,7 @@ jobs:
             echo "$manifest" | jq -c '{name, version}' >> "$GITHUB_OUTPUT"
             
             # Publish
-            pesde publish -y
+            PESDE_TOKEN="$GITHUB_TOKEN" pesde publish -y
           done <<< "$commits"
 
           echo "EOF" >> "$GITHUB_OUTPUT"
