--- a/.github/workflows/publish-update.yaml
+++ b/.github/workflows/publish-update.yaml
@@ -22,7 +22,8 @@ jobs:
         id: publish
         continue-on-error: true
         env:
-          GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
+          PESDE_TOKEN: ${{ secrets.PESDE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           lune -V
 
@@ -56,7 +57,7 @@ jobs:
             echo "$manifest" | jq -c '{name, version}' >> "$GITHUB_OUTPUT"
             
             # Publish
-            PESDE_TOKEN="$GITHUB_TOKEN" pesde publish -y
+            pesde publish -y
           done <<< "$commits"
 
           echo "EOF" >> "$GITHUB_OUTPUT"
