ci: properly set pesde token for setup action invocation

--- a/.github/workflows/publish-update.yaml
+++ b/.github/workflows/publish-update.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup pesde
         uses: axiom-co/setup-pesde@b690699ace34169731b6b2a1c93b2008472038a7
         with:
-          PESDE_TOKEN: ${{ secrets.PESDE_TOKEN }}
+          token: ${{ secrets.PESDE_TOKEN }}
           cache: true
       - name: Publish
         id: publish
