fix: make requested changes/fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,84 +1,5 @@
 {
-	"luau-lsp.completion.addParentheses": true,
-	"luau-lsp.completion.addTabstopAfterParentheses": false,
-	"luau-lsp.completion.autocompleteEnd": true,
-	"luau-lsp.completion.enabled": true,
-	"luau-lsp.completion.enableFragmentAutocomplete": false,
-	"luau-lsp.completion.fillCallArguments": false,
-	"luau-lsp.completion.imports.enabled": true,
-	"luau-lsp.completion.imports.ignoreGlobs": [
-		"**/.pesde/**",
-		"**/*.bin.luau",
-		"**/dist/**"
-	],
-	"luau-lsp.completion.imports.requireStyle": "alwaysAbsolute",
-	"luau-lsp.completion.imports.separateGroupsWithLine": true,
-	"luau-lsp.completion.imports.stringRequires.enabled": true,
-	"luau-lsp.completion.imports.suggestRequires": true,
-	"luau-lsp.completion.imports.suggestServices": true,
-	"luau-lsp.completion.showPropertiesOnMethodCall": false,
-	"luau-lsp.diagnostics.includeDependents": true,
-	"luau-lsp.diagnostics.pullOnChange": true,
-	"luau-lsp.diagnostics.pullOnSave": true,
-	"luau-lsp.diagnostics.strictDatamodelTypes": true,
-	"luau-lsp.diagnostics.workspace": true,
-	"luau-lsp.fflags.enableByDefault": false,
-	"luau-lsp.fflags.enableNewSolver": false,
-	"luau-lsp.fflags.override": {},
-	"luau-lsp.fflags.sync": true,
-	"luau-lsp.hover.enabled": true,
-	"luau-lsp.hover.includeStringLength": true,
-	"luau-lsp.hover.multilineFunctionDefinitions": true,
-	"luau-lsp.hover.showTableKinds": true,
-	"luau-lsp.hover.strictDatamodelTypes": true,
-	"luau-lsp.ignoreGlobs": [
-		"**/.pesde/**",
-		"**/*.bin.luau",
-		"**/dist/**"
-	],
-	"luau-lsp.index.enabled": true,
-	"luau-lsp.index.maxFiles": 10000,
-	"luau-lsp.inlayHints.functionReturnTypes": true,
-	"luau-lsp.inlayHints.hideHintsForErrorTypes": false,
-	"luau-lsp.inlayHints.hideHintsForMatchingParameterNames": true,
-	"luau-lsp.inlayHints.makeInsertable": true,
-	"luau-lsp.inlayHints.parameterNames": "none",
-	"luau-lsp.inlayHints.parameterTypes": false,
-	"luau-lsp.inlayHints.typeHintMaxLength": 50,
-	"luau-lsp.inlayHints.variableTypes": false,
-	"luau-lsp.platform.type": "standard",
-	"luau-lsp.plugin.enabled": false,
-	"luau-lsp.plugin.maximumRequestBodySize": "3mb",
-	"luau-lsp.plugin.port": 3667,
-	"luau-lsp.server.communicationChannel": "stdio",
-	"luau-lsp.server.crashReporting.enabled": false,
-	"luau-lsp.server.delayStartup": false,
-	"luau-lsp.server.path": "",
-	"luau-lsp.signatureHelp.enabled": true,
-	"luau-lsp.sourcemap.autogenerate": true,
 	"luau-lsp.sourcemap.enabled": false,
-	"luau-lsp.sourcemap.generatorCommand": "",
-	"luau-lsp.sourcemap.includeNonScripts": true,
-	"luau-lsp.sourcemap.rojoProjectFile": "default.project.json",
-	"luau-lsp.sourcemap.sourcemapFile": "./sourcemap.json",
-	"luau-lsp.sourcemap.useVSCodeWatcher": false,
-	"luau-lsp.types.definitionFiles": [],
-	"luau-lsp.types.disabledGlobals": [],
-	"luau-lsp.types.documentationFiles": [],
-	"luau-lsp.types.robloxSecurityLevel": "PluginSecurity",
-	"luau.trace.server": "off",
-	"workbench.editor.customLabels.patterns": {
-		"**/init.lua": "${dirname} (${filename}.${extname})",
-		"**/init.luau": "${dirname} (${filename}.${extname})"
-	},
-	"[lua]": {
-		"editor.defaultFormatter": "JohnnyMorganz.stylua",
-		"editor.formatOnSave": true
-	},
-	"[luau]": {
-		"editor.defaultFormatter": "JohnnyMorganz.stylua",
-		"editor.formatOnSave": true
-	},
-	"stylua.configPath": "./.config/.stylua.toml",
-	"files.eol": "\n",
+	"stylua.targetReleaseVersion": "latest",
+	"editor.formatOnSave": true
 }
