--- a/bins/mantle/pesde.toml
+++ b/bins/mantle/pesde.toml
@@ -1,15 +1,12 @@
 name = "pesde/mantle"
 version = "0.11.18"
 description = "An infrastructure-as-code and deployment tool for Roblox."
-authors = [
-    "CompeyDev <hi@devcomp.xyz>",
-    "Blake Mealey <blakemealey@gmail.com>"
-]
+authors = ["CompeyDev <hi@devcomp.xyz>", "Blake Mealey <blakemealey@gmail.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/mantle"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
-lune = "^0.10.0"
+lune = "^0.10.2"
 pesde = "^0.7.0"
 
 [target]
