refactor: add support for lune v0.10.x (#28)
* chore: update to `lune` v0.10.X

* fix: make requested changes/fixes

* fix: `update_tools.luau` using old require semantics during runtime

* chore(deps): change lune requirement to 0.10.X

* chore(deps): replace forked packages with upstream version

* fix(bins): add required return statement to bin entrypoints

* fix(scripts): attempt to fix `fmt` and `typecheck` scripts

* chore(deps): replace `unzip` fork with upstream version

* chore(deps): require lune `^0.10.2`

* chore: update luau-lsp repository

* chore(deps): update `unzip` to v0.2.0

* revert: rename `toolchainlib` entrypoint back to `init.luau`

* revert(scripts): revert fix to `fmt` and `typecheck`

* chore(bins): make use of returned exit code

* chore: remove any casts from fix attempt

* fix(scripts): typecheck uses `roblox` definitions by default

---------

Co-authored-by: daimond113 <contact@daimond113.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
-  "luau-lsp.sourcemap.enabled": false,
-  "luau-lsp.require.useOriginalRequireByStringSemantics": true,
-  "stylua.targetReleaseVersion": "latest",
-  "editor.formatOnSave": true,
+	"luau-lsp.sourcemap.enabled": false,
+	"stylua.targetReleaseVersion": "latest",
+	"editor.formatOnSave": true
 }
