--- a/bins/mantle/pesde.toml
+++ b/bins/mantle/pesde.toml
@@ -1,25 +1,22 @@
 name = "pesde/mantle"
 version = "0.11.18"
 description = "An infrastructure-as-code and deployment tool for Roblox."
-authors = [
-    "CompeyDev <hi@devcomp.xyz>",
-    "Blake Mealey <blakemealey@gmail.com>"
-]
+authors = ["CompeyDev <hi@devcomp.xyz>", "Blake Mealey <blakemealey@gmail.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/mantle"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
-lune = "^0.8.7"
-pesde = "^0.6.0"
+lune = "^0.10.2"
+pesde = "^0.7.0"
 
 [target]
 environment = "lune"
 bin = "init.luau"
 
 [dependencies]
-result = { name = "lukadev_0/result", version = "^1.2.0" }
-option = { name = "lukadev_0/option", version = "^1.2.0" }
-core = { workspace = "pesde/toolchainlib", version = "^" }
+result = { name = "lukadev_0/result", version = "^1.2.1" }
+option = { name = "lukadev_0/option", version = "^1.2.1" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/pesde-pkg/index"
