--- a/bins/blink/pesde.toml
+++ b/bins/blink/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/blink"
-version = "0.18.1"
+version = "0.18.1+toolchainlib.1"
 description = "An IDL compiler written in Luau for ROBLOX buffer networking"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Axen <axen@frombloxware.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/blink"
