--- a/bins/darklua/pesde.toml
+++ b/bins/darklua/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/darklua"
-version = "0.17.1"
+version = "0.17.1+toolchainlib.1"
 description = "A command line tool that transforms Lua code"
 authors = [
 	"CompeyDev <hi@devcomp.xyz>",
