--- a/bins/luau_lsp/pesde.toml
+++ b/bins/luau_lsp/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/luau_lsp"
-version = "1.53.5"
+version = "1.53.5+toolchainlib.1"
 description = "Language Server Implementation for Luau"
 authors = [
 	"CompeyDev <hi@devcomp.xyz>",
