--- a/bins/mantle/pesde.toml
+++ b/bins/mantle/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/mantle"
-version = "0.11.18"
+version = "0.11.18+toolchainlib.1"
 description = "An infrastructure-as-code and deployment tool for Roblox."
 authors = ["CompeyDev <hi@devcomp.xyz>", "Blake Mealey <blakemealey@gmail.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/mantle"
