--- a/bins/selene/pesde.toml
+++ b/bins/selene/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/selene"
-version = "0.29.0"
+version = "0.29.0+toolchainlib.1"
 description = "A blazing-fast modern Lua linter written in Rust"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Kampfkarren <kampfkarren@gmail.com>"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/selene"
