--- a/bins/zap/pesde.toml
+++ b/bins/zap/pesde.toml
@@ -1,5 +1,5 @@
 name = "pesde/zap"
-version = "0.6.25"
+version = "0.6.25+toolchainlib.2"
 description = "A lightning fast networking solution for roblox."
 authors = ["CompeyDev <hi@devcomp.xyz>", "Redblox Organization"]
 repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/zap"
