feat: adjust for private index

--- a/bins/argon/pesde.toml
+++ b/bins/argon/pesde.toml
@@ -1,25 +1,26 @@
-name = "pesde/argon"
+name = "vortex_interactive/argon"
 version = "2.0.26+toolchainlib.1"
 description = "Argon - Full featured tool for Roblox development"
 authors = [
 	"AridAjd <aridthedev@gmail.com>",
 	"DervexDev <contact@dervex.dev> (https://dervex.dev/)",
 ]
-repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/argon"
+repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/argon"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
 lune = "^0.10.2"
-pesde = "^0.7.0"
+pesde = "^0.7.1"
 
 [target]
 environment = "lune"
 bin = "init.luau"
 
 [dependencies]
-result = { name = "lukadev_0/result", version = "^1.2.1" }
-option = { name = "lukadev_0/option", version = "^1.2.1" }
-toolchainlib = { workspace = "pesde/toolchainlib" }
+result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
+option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
+toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
 
 [indices]
-default = "https://github.com/pesde-pkg/index"
+default = "https://github.com/Vortex-Interactive/pesde-index"
+official = "https://github.com/pesde-pkg/index"
