--- a/bins/blink/pesde.toml
+++ b/bins/blink/pesde.toml
@@ -1,22 +1,23 @@
-name = "pesde/blink"
-version = "0.18.1+toolchainlib.1"
+name = "vortex_interactive/blink"
+version = "0.18.4+toolchainlib.1"
 description = "An IDL compiler written in Luau for ROBLOX buffer networking"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Axen <axen@frombloxware.com>"]
-repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/blink"
+repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/blink"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
 lune = "^0.10.2"
-pesde = "^0.7.0"
+pesde = "^0.7.1"
 
 [target]
 environment = "lune"
 bin = "init.luau"
 
 [dependencies]
-result = { name = "lukadev_0/result", version = "^1.2.1" }
-option = { name = "lukadev_0/option", version = "^1.2.1" }
-toolchainlib = { workspace = "pesde/toolchainlib" }
+result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
+option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
+toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
 
 [indices]
-default = "https://github.com/pesde-pkg/index"
+default = "https://github.com/Vortex-Interactive/pesde-index"
+official = "https://github.com/pesde-pkg/index"
