--- a/bins/rojo/pesde.toml
+++ b/bins/rojo/pesde.toml
@@ -1,22 +1,23 @@
-name = "pesde/rojo"
+name = "vortex_interactive/rojo"
 version = "7.5.1+toolchainlib.1"
 description = "Rojo enables Roblox developers to use professional-grade software engineering tools"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Lucien Greathouse <me@lpghatguy.com>"]
-repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/rojo"
+repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/rojo"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
 lune = "^0.10.2"
-pesde = "^0.7.0"
+pesde = "^0.7.1"
 
 [target]
 environment = "lune"
 bin = "init.luau"
 
 [dependencies]
-result = { name = "lukadev_0/result", version = "^1.2.1" }
-option = { name = "lukadev_0/option", version = "^1.2.1" }
-toolchainlib = { workspace = "pesde/toolchainlib" }
+result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
+option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
+toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
 
 [indices]
-default = "https://github.com/pesde-pkg/index"
+default = "https://github.com/Vortex-Interactive/pesde-index"
+official = "https://github.com/pesde-pkg/index"
