--- a/bins/selene/pesde.toml
+++ b/bins/selene/pesde.toml
@@ -1,22 +1,23 @@
-name = "pesde/selene"
+name = "vortex_interactive/selene"
 version = "0.29.0+toolchainlib.1"
 description = "A blazing-fast modern Lua linter written in Rust"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Kampfkarren <kampfkarren@gmail.com>"]
-repository = "https://github.com/pesde-pkg/tooling/tree/main/bins/selene"
+repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/selene"
 includes = ["init.luau", "README.md", "pesde.toml"]
 
 [engines]
 lune = "^0.10.2"
-pesde = "^0.7.0"
+pesde = "^0.7.1"
 
 [target]
 environment = "lune"
 bin = "init.luau"
 
 [dependencies]
-result = { name = "lukadev_0/result", version = "^1.2.1" }
-option = { name = "lukadev_0/option", version = "^1.2.1" }
-toolchainlib = { workspace = "pesde/toolchainlib" }
+result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
+option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
+toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
 
 [indices]
-default = "https://github.com/pesde-pkg/index"
+default = "https://github.com/Vortex-Interactive/pesde-index"
+official = "https://github.com/pesde-pkg/index"
