--- a/pesde.toml
+++ b/pesde.toml
@@ -1,4 +1,4 @@
-name = "pesde/tooling"
+name = "vortex_interactive/tooling"
 version = "0.1.0"
 private = true
 
@@ -6,16 +6,17 @@ workspace_members = ["toolchainlib", "bins/*"]
 
 [engines]
 lune = "^0.10.2"
-pesde = "^0.7.0"
+pesde = "^0.7.1"
 
 [target]
 environment = "lune"
 
 [dev_dependencies]
-option = { name = "lukadev_0/option", version = "^1.2.1" }
-result = { name = "lukadev_0/result", version = "^1.2.1" }
-pathfs = { name = "jiwonz/pathfs", version = "^0.6.0" }
-base64 = { name = "synpixel/base64", version = "^3.0.1" }
+option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
+result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
+pathfs = { name = "jiwonz/pathfs", version = "^0.6.0", index = "official" }
+base64 = { name = "synpixel/base64", version = "^3.0.1", index = "official" }
 
 [indices]
-default = "https://github.com/pesde-pkg/index"
+default = "https://github.com/Vortex-Interactive/pesde-index"
+official = "https://github.com/pesde-pkg/index"
