--- a/toolchainlib/pesde.toml
+++ b/toolchainlib/pesde.toml
@@ -1,26 +1,27 @@
-name = "pesde/toolchainlib"
+name = "vortex_interactive/toolchainlib"
 description = "A Luau library for implementing toolchain management"
 version = "0.2.0"
 license = "MIT"
-repository = "https://github.com/pesde-pkg/tooling/tree/main/toolchainlib"
+repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/toolchainlib"
 includes = ["src/**/*.luau", "pesde.toml", "LICENSE", "README.md"]
 
 [engines]
 lune = "^0.10.2"
-pesde = "^0.7.0"
+pesde = "^0.7.1"
 
 [target]
 environment = "lune"
 lib = "src/init.luau"
 
 [dependencies]
-pathfs = { name = "jiwonz/pathfs", version = "^0.6.0" }
-dirs = { name = "jiwonz/dirs", version = "^0.6.0" }
-unzip = { name = "0x5eal/unzip", version = "^0.2.0", target = "luau" }
+pathfs = { name = "jiwonz/pathfs", version = "^0.6.0", index = "official" }
+dirs = { name = "jiwonz/dirs", version = "^0.6.0", index = "official" }
+unzip = { name = "0x5eal/unzip", version = "^0.2.0", target = "luau", index = "official" }
 
 [peer_dependencies]
-result = { name = "lukadev_0/result", version = "^1.2.1" }
-option = { name = "lukadev_0/option", version = "^1.2.1" }
+result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
+option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
 
 [indices]
-default = "https://github.com/pesde-pkg/index"
+default = "https://github.com/Vortex-Interactive/pesde-index"
+official = "https://github.com/pesde-pkg/index"
