--- a/pesde.toml
+++ b/pesde.toml
@@ -5,7 +5,7 @@ private = true
 workspace_members = ["toolchainlib", "bins/*"]
 
 [engines]
-lune = "^0.10.2"
+lune = "^0.10.3"
 pesde = "^0.7.1"
 
 [target]
@@ -16,6 +16,7 @@ option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 pathfs = { name = "jiwonz/pathfs", version = "^0.6.0", index = "official" }
 base64 = { name = "synpixel/base64", version = "^3.0.1", index = "official" }
+watchexec = { name = "vortex_interactive/watchexec", version = "^2.3.2+toolchainlib.1" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
