--- a/bins/argon/pesde.toml
+++ b/bins/argon/pesde.toml
@@ -1,5 +1,5 @@
-name = "vortex_interactive/argon"
-version = "2.0.26+toolchainlib.2"
+name = "pesde/argon"
+version = "2.0.26+tcl.1"
 description = "Argon - Full featured tool for Roblox development"
 authors = [
 	"AridAjd <aridthedev@gmail.com>",
@@ -19,7 +19,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
-toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
