--- a/bins/blink/pesde.toml
+++ b/bins/blink/pesde.toml
@@ -1,5 +1,5 @@
-name = "vortex_interactive/blink"
-version = "0.18.4+toolchainlib.2"
+name = "pesde/blink"
+version = "0.18.4+tcl.1"
 description = "An IDL compiler written in Luau for ROBLOX buffer networking"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Axen <axen@frombloxware.com>"]
 repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/blink"
@@ -16,7 +16,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
-toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
