--- a/bins/mantle/pesde.toml
+++ b/bins/mantle/pesde.toml
@@ -1,5 +1,5 @@
-name = "vortex_interactive/mantle"
-version = "0.11.18+toolchainlib.2"
+name = "pesde/mantle"
+version = "0.11.18+tcl.1"
 description = "An infrastructure-as-code and deployment tool for Roblox."
 authors = ["CompeyDev <hi@devcomp.xyz>", "Blake Mealey <blakemealey@gmail.com>"]
 repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/mantle"
@@ -16,7 +16,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
-toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
