--- a/bins/selene/pesde.toml
+++ b/bins/selene/pesde.toml
@@ -1,5 +1,5 @@
-name = "vortex_interactive/selene"
-version = "0.29.0+toolchainlib.2"
+name = "pesde/selene"
+version = "0.29.0+tcl.1"
 description = "A blazing-fast modern Lua linter written in Rust"
 authors = ["CompeyDev <hi@devcomp.xyz>", "Kampfkarren <kampfkarren@gmail.com>"]
 repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/selene"
@@ -16,7 +16,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
-toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
