--- a/bins/stylua/pesde.toml
+++ b/bins/stylua/pesde.toml
@@ -1,5 +1,5 @@
-name = "vortex_interactive/stylua"
-version = "2.3.0+toolchainlib.2"
+name = "pesde/stylua"
+version = "2.3.0+tcl.1"
 description = "A Lua code formatter"
 authors = [
 	"CompeyDev <hi@devcomp.xyz>",
@@ -19,7 +19,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
-toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
