--- a/bins/zap/pesde.toml
+++ b/bins/zap/pesde.toml
@@ -1,5 +1,5 @@
-name = "vortex_interactive/zap"
-version = "0.6.27+toolchainlib.2"
+name = "pesde/zap"
+version = "0.6.27+tcl.1"
 description = "A lightning fast networking solution for roblox."
 authors = ["CompeyDev <hi@devcomp.xyz>", "Redblox Organization"]
 repository = "https://github.com/Vortex-Interactive/pesde-tooling/tree/main/bins/zap"
@@ -16,7 +16,7 @@ bin = "init.luau"
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.1", index = "official" }
 option = { name = "lukadev_0/option", version = "^1.2.1", index = "official" }
-toolchainlib = { workspace = "vortex_interactive/toolchainlib" }
+toolchainlib = { workspace = "pesde/toolchainlib" }
 
 [indices]
 default = "https://github.com/Vortex-Interactive/pesde-index"
